@@ -1,5 +1,6 @@
 Changes for 1.8.7rc1
 
+ - [ZBXNEXT-898] new trigger actions have "trigger = PROBLEM" and "not in maintenance" conditions by default (Vedmak)
  - [ZBX-4021] fixing item visibility in event then last value is null (Eduard)
  - [ZBX-4052] fixed key macros resolving in item names (Vedmak)
  - [ZBX-1357] removed outdated translation strings from all translations (Richlv)
